--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
-streamlit
+streamlit==1.32.2
+pdfplumber==0.10.3
+pypdf==4.2.0
 
-pdfplumber
-pypdf
+# --- LangChain correct versions ---
+langchain==0.1.13
+langchain-core==0.1.32
+langchain-community==0.0.29
+langchain-text-splitters==0.0.1
 
+# --- Google genAI ---
+langchain-google-genai==0.0.6
+google-generativeai==0.3.2
+
+# --- Vector DB ---
 faiss-cpu
 
-langchain
-langchain-community
-langchain-google-genai
-
-google-generativeai
-
-numpy
+# --- Others ---
+tiktoken==0.5.2
+python-dotenv==1.0.1
 requests
-tiktoken
-
+numpy
