--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit
-pdfplumber
-pypdf
+streamlit==1.32.2
+pdfplumber==0.10.3
+pypdf==4.2.0
 
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
+langchain==0.1.13
+langchain-core==0.1.32
+langchain-community==0.0.29
+langchain-text-splitters==0.0.1
 
-langchain-google-genai
-google-generativeai
+langchain-google-genai==0.0.6
+google-generativeai==0.3.2
 
-faiss-cpu
+faiss-cpu==1.7.2
 
-tiktoken
-python-dotenv
+tiktoken==0.5.2
 numpy
+python-dotenv
 requests
