--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit
 pdfplumber
 langchain
+langchain.text_splitter
 langchain-google-genai
 langchain-community
 PyPDF2
 pdfminer.six
 requests
+
