--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
- streamlit pdfplumber pypdf faiss-cpu google-generativeai langchain langchain-google-genai langchain-community langchain-text-splitters tiktoken python-dotenv numpy requests
+ streamlit
+pdfplumber
+faiss-cpu 
+google-generativeai 
+langchain 
+langchain-google-genai
+langchain-community 
+langchain-text-splitters 
+tiktoken 
+python-dotenv 
+numpy
+requests
+
