--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,26 @@
-# ----------------- CORE APP & UI -----------------
-streamlit==1.33.0
+streamlit==1.32.2
 
-# ----------------- LANGCHAIN CORE STACK -----------------
-langchain==0.1.14
-langchain-core==0.1.31
-langchain-community==0.0.28
-langchain-text-splitters==0.0.1
+# Core LangChain
+langchain==0.1.20
+langchain-core==0.2.24
+langchain-community==0.2.20
 
-# ----------------- GOOGLE GEMINI -----------------
-langchain-google-genai==0.0.6
-google-generativeai==0.3.2
+# Gemini integration
+langchain-google-genai==1.0.1
+google-generativeai==0.5.4
 
-# ----------------- VECTOR DB -----------------
-faiss-cpu==1.13.1
+# Embeddings
+sentence-transformers==2.7.0
 
-# ----------------- EMBEDDINGS / TRANSFORMERS -----------------
-sentence-transformers==2.5.1
+# Vector DB
+faiss-cpu==1.7.4
+
+# Text splitting
+langchain-text-splitters==0.2.2
+
+# PDF parsing
+pdfplumber==0.10.3
+
+# HuggingFace embeddings
 transformers==4.37.2
-huggingface-hub==0.20.3
-
-
-# ----------------- PDF + OCR -----------------
-pdfplumber==0.11.0
-pytesseract==0.3.10
-pdf2image==1.16.3
-pypdf2==3.0.1
-pillow==10.2.0
-
-# ----------------- UTILITIES -----------------
-numpy==1.26.4
-pandas==2.2.1
-tqdm==4.66.2
-
-protobuf==4.25.3
 
